--- a/_posts/2015-08-02-Intro.md
+++ b/_posts/2015-08-02-Intro.md
@@ -11,7 +11,7 @@ fa-icon: desktop
 All the necessary features required in a modern IDE such as autocomplete, tooltips, document formatting, syntax and error highlighting, and many more.
 
 {:.gif}
-![](/img/fsharp.gif)
+![class=".scale-with-grid"](/img/fsharp.gif)
 
 
 ### F&#35; Interactive
@@ -19,14 +19,14 @@ All the necessary features required in a modern IDE such as autocomplete, toolti
 Running F# scripts inside editor to provide fast and easy feedback loop.
 
 {:.gif}
-![](/img/fsi.gif)
+![class=".scale-with-grid"](/img/fsi.gif)
 
 
 ### Project scaffolding
 
 Integration with the [F# Yeoman Generator](https://www.npmjs.com/package/generator-fsharp) allows for easy and fast creation of new projects.
 
-{:.gif}
+{:.scale-with-grid .gif}
 ![](/img/yeoman.gif)
 
 
@@ -34,7 +34,7 @@ Integration with the [F# Yeoman Generator](https://www.npmjs.com/package/generat
 
 Integration with the widely used [Paket package manager tool](http://fsprojects.github.io/Paket/) created by the F# community allows for easy management of application dependencies.
 
-{:.gif}
+{:.scale-with-grid .gif}
 ![](/img/paket.gif)
 
 
@@ -42,5 +42,5 @@ Integration with the widely used [Paket package manager tool](http://fsprojects.
 
 Integration with the [Fake popular build tool](http://fsharp.github.io/FAKE/) created by the F# community allows running build tasks without leaving the editor.
 
-{:.gif}
+{:.scale-with-grid .gif}
 ![](/img/fake.gif)
